<resources>
    <string name="app_name">MyQuiz</string>

    // MainActivity
    <string name="txt_menu">Hauptmenü</string>
    <string name="btn_start">Start Quiz</string>
    <string name="btn_highscores">Highscores</string>
    <string name="btn_settings">Einstellungen</string>
    <string name="txt_company">Woodpecker Games 1.0</string>

    // SettingsActivity
    <string name="txt_settings">Einstellungen</string>
    <string name="txt_avatar">Avatar</string>
    <string name="txt_username">Spielername</string>
    <string name="txt_btn_color">Buttonfarbe</string>
    <string name="txt_sound">Sound (Aus/An)</string>
    <string name="txt_enter_name">Name eingeben</string>
    <string name="btn_quit">Abbrechen</string>
    <string name="btn_save">Speichern</string>

    // CategoryActivity
    <string name="txt_category">Kategorie</string>
    <string name="btn_random">Zufall</string>
    <string name="btn_computer">Computer</string>
    <string name="btn_geography">Geografie</string>
    <string name="btn_history">Geschichte</string>
    <string name="btn_fauna">Flora und Fauna</string>
    <string name="btn_sports">Sport</string>
    <string name="btn_science">Naturwissenschaften</string>

    // HighscoresActivity
    <string name="txt_highscores">Highscores</string>
    <string name="txt_placement">Platz</string>
    <string name="txt_score">Punkte</string>

    // GameActivity
    <string name="txt_game_category">Kategorie: Computer</string>
    <string name="txt_game_score">Punkte: 0</string>
    <string name="txt_game_question">Frage: 1 von 5</string>

    // Questions and Answers

    // Buttons
    <string name="btn_A">A</string>
    <string name="btn_B">B</string>
    <string name="btn_C">C</string>

    // 001
    <string name="txt_question_001">Was ist Java noch?</string>
    <string name="txt_A_001">A) eine Insel</string>
    <string name="txt_B_001">B) ein Tier</string>
    <string name="txt_C_001">C) ein Gericht</string>
    <string name="txt_D_001">D) eine Pflanze</string>

</resources>