<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/txt_menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings"
        android:textAllCaps="true"
        android:textColor="@color/eggshell"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_bg"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_bg"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:alpha="0.8"
        android:background="@drawable/round_corners_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.025"
        tools:layout_editor_absoluteX="-69dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/txt_avatar"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/txt_username"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/txt_btn_color"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/txt_sound"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_corners_entry_bg"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/txt_enter_name"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/btn_color_1"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/textView19">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_color_2"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_color_3"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_color_4"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/avatar_asian" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/avatar_caucasian" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/avatar_punk" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/avatar_black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_quit"
        android:textAllCaps="true"
        android:textColor="@color/eggshell"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_save"
        android:textAllCaps="true"
        android:textColor="@color/eggshell"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>